--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -27,23 +27,23 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
-    <TextView
-        android:id="@+id/textView16"
-        android:layout_width="238dp"
-        android:layout_height="34dp"
-        android:fontFamily="@font/jua"
-        android:text="email"
-        android:textAlignment="viewStart"
-        android:textColor="#825C03"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.594"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView9"
-        app:layout_constraintVertical_bias="0.025" />
+        <TextView
+            android:id="@+id/textView16"
+            android:layout_width="238dp"
+            android:layout_height="34dp"
+            android:fontFamily="@font/jua"
+            android:text="email"
+            android:textAlignment="viewStart"
+            android:textColor="#825C03"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.849"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView9"
+            app:layout_constraintVertical_bias="0.03" />
 
-    <ImageView
+        <ImageView
         android:id="@+id/imageView9"
         android:layout_width="293dp"
         android:layout_height="103dp"
@@ -81,13 +81,13 @@
 
         <ImageView
             android:id="@+id/imageView10"
-            android:layout_width="93dp"
-            android:layout_height="66dp"
+            android:layout_width="96dp"
+            android:layout_height="82dp"
             android:layout_marginTop="4dp"
             app:layout_constraintEnd_toStartOf="@+id/textView16"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView9"
-            app:srcCompat="@drawable/bunny" />
+            tools:srcCompat="@tools:sample/avatars" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
