--- a/app/src/main/res/layout/activity_editprofile.xml
+++ b/app/src/main/res/layout/activity_editprofile.xml
@@ -27,6 +27,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.876" />
 
+
         <ImageView
             android:id="@+id/imageView6"
             android:layout_width="293dp"
@@ -35,7 +36,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.409"
+            app:layout_constraintVertical_bias="0.373"
             app:srcCompat="@drawable/logo" />
 
         <ImageButton
@@ -45,10 +46,9 @@
             android:backgroundTint="#00FFFFFF"
             app:layout_constraintBottom_toTopOf="@+id/roundedEditText4"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.511"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.873"
+            app:layout_constraintVertical_bias="0.913"
             app:srcCompat="@drawable/upload" />
 
         <EditText
@@ -57,37 +57,39 @@
             android:layout_height="61dp"
             android:layout_margin="16dp"
             android:background="@drawable/rounded_edittext_background"
-            android:hint="name"
-            android:inputType="text"
-            android:padding="10dp"
+            android:fontFamily="@font/jua"
+            android:hint="password"
+            android:inputType="textPassword"
+            android:paddingLeft="24dp"
             app:layout_constraintBottom_toTopOf="@+id/imageButton3"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.485"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.973" />
+            app:layout_constraintVertical_bias="0.776" />
 
-        <ImageButton
-            android:id="@+id/imageButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="588dp"
-            android:backgroundTint="#00FFFFFF"
-            android:contentDescription="save profile"
-            android:onClick="redirectToHomePage2"
+        <EditText
+            android:id="@+id/roundedEditText"
+            android:layout_width="269dp"
+            android:layout_height="61dp"
+            android:layout_margin="16dp"
+            android:background="@drawable/rounded_edittext_background"
+            android:fontFamily="@font/jua"
+            android:hint="new password"
+            android:inputType="textPassword"
+            android:paddingLeft="24dp"
+            app:layout_constraintBottom_toTopOf="@+id/imageButton3"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.487"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/saveprof" />
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="112dp"
             android:layout_height="34dp"
-            android:layout_marginEnd="180dp"
+            android:layout_marginEnd="156dp"
             android:fontFamily="@font/jua"
-            android:text="email"
+            android:text="password"
             android:textAlignment="center"
             android:textColor="#825C03"
             android:textSize="25sp"
@@ -95,6 +97,20 @@
             app:layout_constraintEnd_toEndOf="@+id/roundedEditText4"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0" />
+
+        <TextView
+            android:id="@+id/textView13"
+            android:layout_width="169dp"
+            android:layout_height="36dp"
+            android:fontFamily="@font/jua"
+            android:text="new password"
+            android:textAlignment="center"
+            android:textColor="#825C03"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toTopOf="@+id/roundedEditText"
+            app:layout_constraintEnd_toEndOf="@+id/roundedEditText"
+            app:layout_constraintHorizontal_bias="0.01"
+            app:layout_constraintStart_toStartOf="@+id/roundedEditText" />
 
         <ImageButton
             android:id="@+id/imageButton3"
@@ -110,5 +126,34 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@drawable/back" />
+
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="616dp"
+            android:backgroundTint="#00FFFFFF"
+            android:contentDescription="save profile"
+            android:onClick="redirectToHomePage2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.487"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/saveprof" />
+
+        <ImageView
+            android:id="@+id/imageView11"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:scaleType="fitCenter"
+            app:layout_constraintBottom_toTopOf="@+id/imageButton17"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.49"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView6"
+            app:layout_constraintVertical_bias="0.69"
+            app:layout_goneMarginRight="140dp"
+            tools:srcCompat="@tools:sample/avatars" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
