--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -31,7 +31,7 @@
             android:id="@+id/textView8"
             android:layout_width="129dp"
             android:layout_height="28dp"
-            android:layout_marginEnd="132dp"
+            android:layout_marginEnd="136dp"
             android:fontFamily="@font/jua"
             android:text="email"
             android:textColor="#825C03"
@@ -39,22 +39,34 @@
             app:layout_constraintBottom_toTopOf="@+id/txtUsername"
             app:layout_constraintEnd_toEndOf="@+id/txtUsername"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="0.968" />
 
         <ImageButton
             android:id="@+id/btnRegisterUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="197dp"
+            android:layout_height="64dp"
             android:backgroundTint="#00FFFFFF"
             android:contentDescription="register"
             android:onClick="redirectToLogin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintHorizontal_bias="0.523"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtConfirmPass"
-            app:layout_constraintVertical_bias="0.476"
+            app:layout_constraintVertical_bias="0.646"
             app:srcCompat="@drawable/register" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="197dp"
+            android:layout_height="65dp"
+            android:layout_marginStart="112dp"
+            android:layout_marginTop="8dp"
+            android:backgroundTint="#00FFFFFF"
+            android:onClick="redirectToMain"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtConfirmPass"
+            app:srcCompat="@drawable/back" />
 
         <TextView
             android:id="@+id/textView17"
@@ -69,7 +81,7 @@
             app:layout_constraintBottom_toTopOf="@+id/txtConfirmPass"
             app:layout_constraintEnd_toEndOf="@+id/txtConfirmPass"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.985" />
+            app:layout_constraintVertical_bias="0.969" />
 
         <EditText
             android:id="@+id/txtConfirmPass"
@@ -84,7 +96,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.805" />
+            app:layout_constraintVertical_bias="0.743" />
 
         <TextView
             android:id="@+id/textView14"
@@ -128,6 +140,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.633"
             app:srcCompat="@drawable/logo" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
