--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -47,6 +47,7 @@
             android:layout_height="28dp"
             android:layout_marginEnd="132dp"
             android:fontFamily="@font/jua"
+            android:inputType="textPassword"
             android:text="email"
             android:textColor="#825C03"
             android:textSize="25sp"
